Changed to Java 21 for virtual threads